@@ -65,6 +65,8 @@
 	- rpmgi: add (*walkPathFilter) for rpmcache use.
 	- permit "/X\ Y" in %_topdir use in scripts (#220449).
 	- fix: rpmInstallSourcePackage() still needs scareMem=1.
+	- rpmgi: add (*stash) for rpmcache use.
+	- move more memory cleanup to rpmcliFini().
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
